Change some part of the code

--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating object...\n",
+      "SeasonalityScript successfully created\n"
+     ]
+    }
+   ],
    "source": [
-    "data = SeasonalityScript(\"CA\", \"01/06/2021\", \"31/07/2023\", \"MON\")"
+    "data = SeasonalityScript(\"IE\", \"01/01/2018\", \"30/06/2023\", \"SAT\")"
    ]
   },
   {
@@ -78,9 +87,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building DataFrame...\n",
+      "DataFrame built succesfully\n",
+      "Getting holidays for Ireland...\n",
+      "Holidays for IE successfully added to DataFrame\n",
+      "Building weekly dummies...\n",
+      "Weekly dummies successfully built\n",
+      "Building monthly dummies...\n",
+      "Monthly dummies successfully built\n",
+      "Joining all dataframes...\n",
+      "DataFrames successfully joined\n",
+      "Preparing CSV file...\n",
+      "CSV file successfully written...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.get_csv(r\"C:\\Users\\nicolas.kossacoff\\Documents\\Python\\Seasonality\")"
    ]
