--- a/Workings and Testings/Notebooks/Testings.ipynb
+++ b/Workings and Testings/Notebooks/Testings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,48 @@
     "country_id = \"GB\"\n",
     "week_ending = False\n",
     "day = \"SAT\"\n",
-    "uk_country = \"ENG\"\n",
+    "uk_country = \"NIR\"\n",
     "country = country_id + \"-\" + uk_country\n",
-    "start_date = datetime.strptime(\"13/06/2015\", r\"%d/%m/%Y\").strftime(r\"%d/%m/%Y\")\n",
-    "end_date = datetime.strptime(\"29/04/2023\", r\"%d/%m/%Y\").strftime(r\"%d/%m/%Y\")\n",
+    "start_date = datetime.strptime(\"01/01/2018\", r\"%d/%m/%Y\").strftime(r\"%Y-%m-%d\")\n",
+    "end_date = datetime.strptime(\"30/06/2023\", r\"%d/%m/%Y\").strftime(r\"%Y-%m-%d\")\n",
     "\n",
-    "start_year = int(datetime.strptime(start_date, r\"%d/%m/%Y\").strftime(r\"%Y\"))\n",
-    "end_year = int(datetime.strptime(end_date, r\"%d/%m/%Y\").strftime(r\"%Y\"))\n",
+    "start_year = int(datetime.strptime(start_date, r\"%Y-%m-%d\").strftime(r\"%Y\"))\n",
+    "end_year = int(datetime.strptime(end_date, r\"%Y-%m-%d\").strftime(r\"%Y\"))\n",
     "\n",
     "while start_year <= end_year:\n",
     "    years.append(start_year)\n",
     "    start_year += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lá Caille  -  New Year's Day\n",
+      "Lá Fhéile Bríde  -  Saint Brigid's Day\n",
+      "Lá Fhéile Pádraig  -  Saint Patrick's Day\n",
+      "Aoine an Chéasta  -  Good Friday\n",
+      "Luan Cásca  -  Easter Monday\n",
+      "Lá Bealtaine  -  May Day\n",
+      "Lá Saoire i mí an Mheithimh  -  June Holiday\n",
+      "Lá Saoire i mí Lúnasa  -  August Holiday\n",
+      "Lá Saoire i mí Dheireadh Fómhair  -  October Holiday\n",
+      "Lá Nollag  -  Christmas Day\n",
+      "Lá Fhéile Stiofáin  -  St. Stephen's Day\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri = f\"https://date.nager.at/api/v3/PublicHolidays/2023/IE\"\n",
+    "connection = requests.get(uri)\n",
+    "response = json.loads(connection.content)\n",
+    "for item in response:\n",
+    "    print(item[\"localName\"], \" - \",  item[\"name\"])"
    ]
   },
   {
