--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -18,8 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta\n",
-    "from SeasonalityScript import SeasonalityScript\n",
-    "from SeasonalityScript import get_available_countries"
+    "from SeasonalityScript import SeasonalityScript, Info"
    ]
   },
   {
@@ -35,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_available_countries()"
+    "info = Info().get_info()"
    ]
   },
   {
