--- a/Workings and Testings/Notebooks/Testings.ipynb
+++ b/Workings and Testings/Notebooks/Testings.ipynb
@@ -51,33 +51,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lá Caille  -  New Year's Day\n",
-      "Lá Fhéile Bríde  -  Saint Brigid's Day\n",
-      "Lá Fhéile Pádraig  -  Saint Patrick's Day\n",
-      "Aoine an Chéasta  -  Good Friday\n",
-      "Luan Cásca  -  Easter Monday\n",
-      "Lá Bealtaine  -  May Day\n",
-      "Lá Saoire i mí an Mheithimh  -  June Holiday\n",
-      "Lá Saoire i mí Lúnasa  -  August Holiday\n",
-      "Lá Saoire i mí Dheireadh Fómhair  -  October Holiday\n",
-      "Lá Nollag  -  Christmas Day\n",
-      "Lá Fhéile Stiofáin  -  St. Stephen's Day\n"
+      "Good Friday  -  Good Friday\n",
+      "Early May Bank Holiday  -  Early May Bank Holiday\n",
+      "Spring Bank Holiday  -  Spring Bank Holiday\n",
+      "Queen’s Platinum Jubilee  -  Queen’s Platinum Jubilee\n",
+      "Queen’s State Funeral  -  Queen’s State Funeral\n",
+      "Boxing Day  -  St. Stephen's Day\n",
+      "Christmas Day  -  Christmas Day\n"
      ]
     }
    ],
    "source": [
-    "uri = f\"https://date.nager.at/api/v3/PublicHolidays/2023/IE\"\n",
+    "country = \"GB-NIR\"\n",
+    "uri = f\"https://date.nager.at/api/v3/PublicHolidays/2022/AR\"\n",
     "connection = requests.get(uri)\n",
     "response = json.loads(connection.content)\n",
     "for item in response:\n",
-    "    print(item[\"localName\"], \" - \",  item[\"name\"])"
+    "    try:\n",
+    "        if item[\"item\"][0] == \"Public\" and country in item[\"countries\"]:\n",
+    "            print(item[\"localName\"], \" - \",  item[\"name\"])\n",
+    "    except:\n",
+    "        if item[\"types\"][0] == \"Public\" and item[\"counties\"] == None:\n",
+    "            print(item[\"localName\"], \" - \",  item[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Año Nuevo  -  New Year's Day\n",
+      "Carnaval  -  Carnival\n",
+      "Carnaval  -  Carnival\n",
+      "Día Nacional de la Memoria por la Verdad y la Justicia  -  Day of Remembrance for Truth and Justice\n",
+      "Día del Veterano y de los Caídos en la Guerra de Malvinas  -  Day of the Veterans and Fallen of the Malvinas War\n",
+      "Viernes Santo  -  Good Friday\n",
+      "Día del Trabajador  -  Labour Day\n",
+      "Día de la Revolución de Mayo  -  May Revolution\n",
+      "Paso a la Inmortalidad del General Martín Miguel de Güemes  -  Anniversary of the Passing of General Martín Miguel de Güemes\n",
+      "Paso a la Inmortalidad del General Manuel Belgrano  -  General Manuel Belgrano Memorial Day\n",
+      "Día de la Independencia  -  Independence Day\n",
+      "Paso a la Inmortalidad del General José de San Martín  -  General José de San Martín Memorial Day\n",
+      "Día del Respeto a la Diversidad Cultural  -  Day of Respect for Cultural Diversity\n",
+      "Día de la Soberanía Nacional  -  National Sovereignty Day\n",
+      "Día de la Inmaculada Concepción de María  -  Immaculate Conception Day\n",
+      "Navidad  -  Christmas Day\n"
+     ]
+    }
+   ],
+   "source": [
+    "country = \"GB-NIR\"\n",
+    "uri = f\"https://date.nager.at/api/v3/PublicHolidays/2022/AR\"\n",
+    "connection = requests.get(uri)\n",
+    "response = json.loads(connection.content)\n",
+    "for item in response:\n",
+    "    if item[\"counties\"] == None and item[\"types\"][0] == \"Public\":\n",
+    "        print(item[\"localName\"], \" - \",  item[\"name\"])"
    ]
   },
   {
