Updated the build_weekly_dummies() function

--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta\n",
+    "from SeasonalityScript import SeasonalityScript, Info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from SeasonalityScript import SeasonalityScript, Info"
    ]
   },
@@ -61,18 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating object...\n",
-      "SeasonalityScript successfully created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = SeasonalityScript(\"IE\", \"01/01/2018\", \"30/06/2023\", \"SAT\")"
    ]
@@ -86,38 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building DataFrame...\n",
-      "DataFrame built succesfully\n",
-      "Getting holidays for Ireland...\n",
-      "Holidays for IE successfully added to DataFrame\n",
-      "Building weekly dummies...\n",
-      "Weekly dummies successfully built\n",
-      "Building monthly dummies...\n",
-      "Monthly dummies successfully built\n",
-      "Joining all dataframes...\n",
-      "DataFrames successfully joined\n",
-      "Preparing CSV file...\n",
-      "CSV file successfully written...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.get_csv(r\"C:\\Users\\nicolas.kossacoff\\Documents\\Python\\Seasonality\")"
    ]
