--- a/Workings and Testings/Notebooks/Testings.ipynb
+++ b/Workings and Testings/Notebooks/Testings.ipynb
@@ -185,6 +185,157 @@
     "df = df[columns]\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = datetime.strptime(\"30/12/2017\", r\"%d/%m/%Y\").strftime(r\"%Y-%m-%d\")\n",
+    "end_date = datetime.strptime(\"31/07/2018\", r\"%d/%m/%Y\").strftime(r\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_number = []\n",
+    "\n",
+    "# Creates a daily frequency DataFrame\n",
+    "dates = pd.date_range(start= \"01/01/2018\", end= \"31/07/2023\", freq= \"D\")\n",
+    "df1 = pd.DataFrame({\"date\": dates})\n",
+    "\n",
+    "# Creates a list with the week number of each date in the DataFrame\n",
+    "for (index, row) in df1.iterrows():\n",
+    "    week_number.append(row[\"date\"].isocalendar().week)\n",
+    "\n",
+    "# Creates the \"Week #\" column\n",
+    "df1[\"Week #\"] = week_number\n",
+    "\n",
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc = \"MON\"\n",
+    "date_commencing = {\"MON\": 0, \"TUE\": 1, \"WED\": 2, \"THU\": 3,\n",
+    "                   \"FRI\": 4, \"SAT\": 5, \"SUN\": 6}\n",
+    "\n",
+    "starting_date = datetime.strptime(start_date, r\"%Y-%m-%d\") + timedelta(days= 4 + 1)\n",
+    "print(type(starting_date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_first_date(wc, date):\n",
+    "    date = datetime.strptime(date, r\"%d/%m/%Y\")\n",
+    "    try:\n",
+    "        if wc == \"MON\":\n",
+    "            if date.weekday() > 0:\n",
+    "                date = date - timedelta(date.weekday())\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"TUE\":\n",
+    "            if date.weekday() > 1:\n",
+    "                date = date - timedelta(date.weekday() + 1)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            elif date.weekday() < 1:\n",
+    "                date = date - timedelta(-7 - date.weekday() + 1)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"WED\":\n",
+    "            if date.weekday() > 2:\n",
+    "                date = date - timedelta(date.weekday() + 2)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            elif date.weekday() < 2:\n",
+    "                date = date - timedelta(-7 - date.weekday() + 2)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"THU\":\n",
+    "            if date.weekday() > 3:\n",
+    "                date = date - timedelta(date.weekday() + 3)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            elif date.weekday() < 3:\n",
+    "                date = date - timedelta(-7 - date.weekday() + 3)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"FRI\":\n",
+    "            if date.weekday() > 4:\n",
+    "                date = date - timedelta(date.weekday() + 4)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            elif date.weekday() < 4:\n",
+    "                date = date - timedelta(-7 - date.weekday() + 4)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"SAT\":\n",
+    "            if date.weekday() != 5:\n",
+    "                date = date - timedelta(date.weekday() + 5)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            elif date.weekday() < 5:\n",
+    "                date = date - timedelta(-7 - date.weekday() + 5)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "        elif wc == \"SUN\":\n",
+    "            if date.weekday() < 6:\n",
+    "                date = date - timedelta(date.weekday() + 6)\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "            else:\n",
+    "                return date.strftime(r\"%Y-%m-%d\")\n",
+    "    except Exception as ex:\n",
+    "        print(\"Something went wrong on the date_convertion() function...\")\n",
+    "        print(ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = datetime.strptime(\"01/01/2018\", r\"%d/%m/%Y\").strftime(r\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-01-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "starting_date = get_first_date(\"TUE\", \"01/01/2018\")\n",
+    "print(starting_date)"
+   ]
   }
  ],
  "metadata": {
