--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -22,15 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from SeasonalityScript import SeasonalityScript, Info"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info = Info().get_info()"
+    "available_countries = Info().get_info()"
    ]
   },
   {
