Updated Jupyter Notebook

--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import libraries"
+    "# Import libraries"
    ]
   },
   {
@@ -41,15 +41,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create object"
+    "# Initialize SeasonalityScript"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- If you're working with the W/E format instead of W/C, you will have to set the optional parameter called ```week_ending=``` to ```True```\n",
-    "- If you're working on a country in the UK, you'll have to set the optional parameter called ```uk_country=``` to select one of the countries in the table below:\n",
+    "- If you're working with the W/E format instead of W/C, you will have to set the optional parameter *week_ending=* to ```True```\n",
+    "- If you're working on a country in the UK, you'll have to set the optional parameter *uk_country=* to select one of the countries in the table below:\n",
     "\n",
     "| Country | Country Code |\n",
     "|---------|--------------|\n",
@@ -66,6 +66,22 @@
    "outputs": [],
    "source": [
     "data = SeasonalityScript(\"IE\", \"01/01/2018\", \"30/06/2023\", \"SAT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check available countries and their country code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_countries = Info().get_info()"
    ]
   },
   {
