Updated some files

--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = SeasonalityScript(\"IE\", \"01/01/2018\", \"30/06/2023\", \"SAT\")"
+    "data = SeasonalityScript(\"UK\", \"01/01/2018\", \"31/08/2023\", \"MON\", uk_country= \"ENG\")"
    ]
   },
   {
