--- a/Workings and Testings/Notebooks/Dummies.ipynb
+++ b/Workings and Testings/Notebooks/Dummies.ipynb
@@ -22,10 +22,11 @@
     "years = []\n",
     "holidays = {}\n",
     "\n",
-    "country_id = \"US\"\n",
+    "country_id = \"UK\"\n",
+    "country = \"ENG\"\n",
     "wc = \"MON\"\n",
     "start_date = datetime.strptime(r\"01/01/2018\", r\"%d/%m/%Y\").strftime(r\"%d/%m/%Y\")\n",
-    "end_date = datetime.strptime(r\"24/07/2023\", r\"%d/%m/%Y\").strftime(r\"%d/%m/%Y\")\n",
+    "end_date = datetime.strptime(r\"31/08/2023\", r\"%d/%m/%Y\").strftime(r\"%d/%m/%Y\")\n",
     "\n",
     "start_year = int(datetime.strptime(start_date, r\"%d/%m/%Y\").strftime(r\"%Y\"))\n",
     "end_year = int(datetime.strptime(end_date, r\"%d/%m/%Y\").strftime(r\"%Y\"))\n",
