--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = SeasonalityScript(\"UK\", \"01/01/2018\", \"31/08/2023\", \"MON\", uk_country= \"ENG\")"
+    "data = SeasonalityScript(\"GB\", \"01/01/2018\", \"31/08/2023\", \"MON\", uk_country= \"ENG\", week_ending= True)"
    ]
   },
   {
