Changed the output format (#1)

--- a/SeasonalityScript.ipynb
+++ b/SeasonalityScript.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime, timedelta\n",
+    "# import json\n",
+    "# import requests\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
+    "# from datetime import datetime, timedelta\n",
     "from SeasonalityScript import SeasonalityScript, Info"
    ]
   },
@@ -45,9 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating object...\n",
+      "SeasonalityScript successfully created\n"
+     ]
+    }
+   ],
    "source": [
     "data = SeasonalityScript(\"US\", \"01/01/2018\", \"31/08/2023\", \"MON\")"
    ]
@@ -77,12 +86,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building DataFrame...\n",
+      "DataFrame built succesfully\n",
+      "Getting holidays for United States...\n",
+      "Holidays for United States successfully added to DataFrame\n",
+      "Building weekly dummies...\n",
+      "Weekly dummies successfully built\n",
+      "Building monthly dummies...\n",
+      "Monthly dummies successfully built\n",
+      "Joining all dataframes...\n",
+      "DataFrames successfully joined\n",
+      "Preparing CSV file...\n",
+      "CSV file successfully written...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.get_csv(r\"/Users/nicolaskossacoff/Library/CloudStorage/OneDrive-UniversidadTorcuatoDiTella/Courses/GIT-REPOS/SeasonalityScript/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data.get_csv(r\"C:\\Users\\nicolas.kossacoff\\Documents\\Python\\Seasonality\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -101,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
