Updated files + included a documentation folder

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SeasonalityScript import SeasonalityScript, Info"
+    "import SeasonalityScript as s"
    ]
   },
   {
@@ -40,27 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating object...\n",
+      "{'SeasonalityScript successfully created': True}\n"
+     ]
+    }
+   ],
    "source": [
-    "data = SeasonalityScript(\"US\", \"01/01/2018\", \"31/08/2023\", \"MON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Check available countries and their country code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "available_countries = Info().get_info()"
+    "data = s.SeasonalityScript(\"US\", \"01/01/2018\", \"31/08/2023\", \"MON\")"
    ]
   },
   {
