--- a/Run.ipynb
+++ b/Run.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.get_csv(r\"/Users/nicolaskossacoff/Library/CloudStorage/OneDrive-UniversidadTorcuatoDiTella/Courses/GIT-REPOS/SeasonalityScript/\")"
+    "data.get_csv(r\"_data/\")"
    ]
   }
  ],
