Included a long format option to the output function

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building DataFrame...\n",
+      "{'DataFrame built succesfully': True}\n",
+      "Getting holidays for United States...\n",
+      "{'Holidays for United States successfully added to DataFrame': True}\n",
+      "Building weekly dummies...\n",
+      "{'Weekly dummies built successfully': True}\n",
+      "Building monthly dummies...\n",
+      "{'Monthly dummies built successfully': True}\n",
+      "Joining all dataframes...\n",
+      "{'DataFrames successfully joined': True}\n",
+      "Preparing CSV file...\n",
+      "{'CSV file successfully written': True}\n"
+     ]
+    }
+   ],
    "source": [
-    "data.get_csv(r\"_data/\")"
+    "data.get_csv(r\"_data/\", long_format= True)"
    ]
   }
  ],
