--- a/Run.ipynb
+++ b/Run.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import SeasonalityScript as s"
+    "from SeasonalityScript import SeasonalityScript"
    ]
   },
   {
@@ -40,20 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating object...\n",
-      "{'SeasonalityScript successfully created': True}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = s.SeasonalityScript(\"US\", \"01/01/2018\", \"31/08/2023\", \"MON\")"
+    "data = SeasonalityScript(\"US\", \"01/01/2018\", \"31/08/2023\", \"MON\")"
    ]
   },
   {
@@ -65,30 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building DataFrame...\n",
-      "{'DataFrame built succesfully': True}\n",
-      "Getting holidays for United States...\n",
-      "{'Holidays for United States successfully added to DataFrame': True}\n",
-      "Building weekly dummies...\n",
-      "{'Weekly dummies built successfully': True}\n",
-      "Building monthly dummies...\n",
-      "{'Monthly dummies built successfully': True}\n",
-      "Joining all dataframes...\n",
-      "{'DataFrames successfully joined': True}\n",
-      "Preparing CSV file...\n",
-      "{'CSV file successfully written': True}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.get_csv(r\"_data/\", long_format= True)"
+    "data.get_csv(r\"data/\")"
    ]
   }
  ],
@@ -108,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
